Fix javascript for profile on mobiles

--- a/app/assets/stylesheets/components/_filter.scss
+++ b/app/assets/stylesheets/components/_filter.scss
@@ -12,8 +12,8 @@
     @media only screen and (max-width: 700px) {
         display: none;
         flex-direction: row;
-        width: 100%;
         flex-wrap: wrap;
+        width: 100%;
         justify-content: center;
         align-items: center;
         padding: 0 1rem;
@@ -48,15 +48,19 @@
     }
 
     &__search {
-        width: 90%;
+        width: 80%;
         padding: 1rem;
         border: 1px solid $color-grey-medium;
         border-radius: .3rem;
-        margin-top: 2.5rem;
+        margin-top: 3.5rem;
         display: none;
 
         @media only screen and (max-width: 700px) {
-            display: block;
+            display: inline-block;
+            width: 50rem;
+        }
+        @media only screen and (max-width: 565px) {
+            width: 26rem;
         }
     }
 
@@ -119,7 +123,7 @@
             background-color: white;
 
             @media only screen and (max-width: 700px) {
-                width: 18rem;
+                width: 25rem;
             }
         }
     }
