--- a/app/assets/stylesheets/components/_listings-panel.scss
+++ b/app/assets/stylesheets/components/_listings-panel.scss
@@ -44,6 +44,8 @@
         }
     
         &__reset {
+            background-color: $color-black;
+            color: $color-grey-light;
             @media only screen and (max-width: 750px) {
                 padding: .5rem .8rem;
             }
@@ -62,7 +64,7 @@
         border-radius: .3rem;
         background-color: white;
 
-        @media only screen and (max-width: 1000px) {
+        @media only screen and (max-width: 750px) {
             font-size: 1.2rem;
             padding: .8rem 1.2rem;
         }
